# nrf51-hardware

./: Cargo.toml  build.rs  nrf51.svd
src/: gpio.rs  lib.rs  main.rs.bk  prog.rs.bk  serial.rs  svd.rs
