[package]
name = "nrf51-hardware"
version = "0.1.0"
authors = ["David Wood <devel@dtwood.uk>"]
build = "build.rs"

[features]
default = ["lazy_static/spin_no_std"]

[dependencies]
lazy_static = "*"
spin = "*"
volatile-register = "*"
nrf51-atomic = { git = "https://github.com/dtwood/nrf51-atomic" }

[build-dependencies]
inflections = "*"
quote = "*"
svd-parser = "*"
svd2rust = { git = "https://github.com/dtwood/svd2rust" }
